<resources>
    <string name="app_name">MyFlexibleFragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_profile">Ini activity Profile</string>
    <string name="this_category">Ini fragment Category</string>
    <string name="category_lifestyle">Ke fragment Lifestyle</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_profile">Ke Halaman Profile Activity</string>
    <string name="show_dialog">Tampilkan sebuah dialog</string>
    <string name="hello_home_fragment">Hello Ini Home Fragment</string>
    <string name="to_category">Ke fragment Category</string>
    <string name="question_coach">Siapa pelatih tersukses Machester City?</string>
    <string name="pep_guardiola">Pep Guardiola</string>
    <string name="roberto_mancini">Roberto Mancini</string>
    <string name="manuel_pellegrini">Manuel Pellegrini</string>
    <string name="oka_aryanata">Oka Aryanata</string>
    <string name="choose">Pilih</string>
    <string name="close">Tutup</string>
</resources>
